@@ -1,0 +1,5 @@
+<ITEMS><ITEM><ICLAS>GenClanCastle</ICLAS><IUSES>100</IUSES><ILEVL>0</ILEVL><IABLE>0</IABLE><IREJV>0</IREJV><ITEXT>&lt;NAME&gt;A Castle %&lt;/NAME&gt;&lt;DESC /&gt;&lt;DISP&gt;a castle is here.&lt;/DISP&gt;&lt;PROP&gt;0|0|0|0|0|0|0|1.0|10000|0|16|&lt;/PROP&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;FLAG&gt;25&lt;/FLAG&gt;&lt;CLOSTX /&gt;&lt;DOORNM&gt;portcullis&lt;/DOORNM&gt;&lt;OPENNM&gt;open&lt;/OPENNM&gt;&lt;CLOSNM&gt;close&lt;/CLOSNM&gt;&lt;KEYNM&gt;UNNAMED_792276443#0&lt;/KEYNM&gt;&lt;OPENTK&gt;0&lt;/OPENTK&gt;&lt;CLANID /&gt;&lt;CITYPE&gt;8&lt;/CITYPE&gt;&lt;IDENT /&gt;&lt;VALUE&gt;20000&lt;/VALUE&gt;&lt;MTRAL&gt;2585&lt;/MTRAL&gt;&lt;READ&gt;UNNAMED_792276443#0&lt;/READ&gt;&lt;WORNL&gt;false&lt;/WORNL&gt;&lt;WORNB&gt;512&lt;/WORNB&gt;&lt;CAPA&gt;0&lt;/CAPA&gt;&lt;CONT&gt;0&lt;/CONT&gt;&lt;OPENTK&gt;0&lt;/OPENTK&gt;&lt;SSAREA&gt;&lt;AREA&gt;&lt;ACLAS&gt;StdBoardableShip&lt;/ACLAS&gt;&lt;ANAME&gt;UNNAMED_792276443&lt;/ANAME&gt;&lt;ADESC /&gt;&lt;ACLIM&gt;-1&lt;/ACLIM&gt;&lt;ASUBS /&gt;&lt;ATECH&gt;3&lt;/ATECH&gt;&lt;ADATA&gt;&lt;ARCHP /&gt;&lt;PARENTS /&gt;&lt;CHILDREN /&gt;&lt;PREJFC /&gt;&lt;IGNMSK /&gt;&lt;BUDGET /&gt;&lt;DEVALR /&gt;&lt;INVRER&gt;0&lt;/INVRER&gt;&lt;CURRENCY /&gt;&lt;IPRICS /&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;AUTHOR /&gt;&lt;DISP /&gt;&lt;BLURBS /&gt;&lt;AATMO&gt;-1&lt;/AATMO&gt;&lt;/ADATA&gt;&lt;AROOMS&gt;&lt;AROOM&gt;&lt;ROOMID&gt;UNNAMED_792276443#0&lt;/ROOMID&gt;&lt;RAREA&gt;UNNAMED_792276443&lt;/RAREA&gt;&lt;RCLAS&gt;StoneRoom&lt;/RCLAS&gt;&lt;RDISP&gt;The Base&lt;/RDISP&gt;&lt;RDESC /&gt;&lt;RTEXT&gt;&lt;RCLIM&gt;0&lt;/RCLIM&gt;&lt;RATMO&gt;-1&lt;/RATMO&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;/RTEXT&gt;&lt;ROOMEXITS&gt;&lt;REXIT&gt;&lt;XDIRE&gt;4&lt;/XDIRE&gt;&lt;XDOOR&gt;UNNAMED_792276443#1&lt;/XDOOR&gt;&lt;XEXIT&gt;&lt;EXID&gt;StdOpenDoorway&lt;/EXID&gt;&lt;EXDAT /&gt;&lt;/XEXIT&gt;&lt;/REXIT&gt;&lt;REXIT&gt;&lt;XDIRE&gt;1&lt;/XDIRE&gt;&lt;XDOOR /&gt;&lt;XEXIT&gt;&lt;EXID&gt;StdOpenDoorway&lt;/EXID&gt;&lt;EXDAT /&gt;&lt;/XEXIT&gt;&lt;/REXIT&gt;&lt;REXIT&gt;&lt;XDIRE&gt;0&lt;/XDIRE&gt;&lt;XDOOR&gt;UNNAMED_792276443#2&lt;/XDOOR&gt;&lt;XEXIT&gt;&lt;EXID&gt;StdOpenDoorway&lt;/EXID&gt;&lt;EXDAT /&gt;&lt;/XEXIT&gt;&lt;/REXIT&gt;&lt;/ROOMEXITS&gt;&lt;ROOMCONTENT&gt;&lt;ROOMMOBS /&gt;&lt;ROOMITEMS /&gt;&lt;/ROOMCONTENT&gt;&lt;/AROOM&gt;
+&lt;AROOM&gt;&lt;ROOMID&gt;UNNAMED_792276443#1&lt;/ROOMID&gt;&lt;RAREA&gt;UNNAMED_792276443&lt;/RAREA&gt;&lt;RCLAS&gt;ShipDeck&lt;/RCLAS&gt;&lt;RDISP&gt;ShipDeck-&lt;/RDISP&gt;&lt;RDESC /&gt;&lt;RTEXT&gt;&lt;RCLIM&gt;-1&lt;/RCLIM&gt;&lt;RATMO&gt;-1&lt;/RATMO&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;/RTEXT&gt;&lt;ROOMEXITS&gt;&lt;REXIT&gt;&lt;XDIRE&gt;5&lt;/XDIRE&gt;&lt;XDOOR&gt;UNNAMED_792276443#0&lt;/XDOOR&gt;&lt;XEXIT&gt;&lt;EXID&gt;StdOpenDoorway&lt;/EXID&gt;&lt;EXDAT /&gt;&lt;/XEXIT&gt;&lt;/REXIT&gt;&lt;/ROOMEXITS&gt;&lt;ROOMCONTENT&gt;&lt;ROOMMOBS /&gt;&lt;ROOMITEMS /&gt;&lt;/ROOMCONTENT&gt;&lt;/AROOM&gt;
+&lt;AROOM&gt;&lt;ROOMID&gt;UNNAMED_792276443#2&lt;/ROOMID&gt;&lt;RAREA&gt;UNNAMED_792276443&lt;/RAREA&gt;&lt;RCLAS&gt;Plains&lt;/RCLAS&gt;&lt;RDISP&gt;Plains-&lt;/RDISP&gt;&lt;RDESC /&gt;&lt;RTEXT&gt;&lt;RCLIM&gt;-1&lt;/RCLIM&gt;&lt;RATMO&gt;-1&lt;/RATMO&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;/RTEXT&gt;&lt;ROOMEXITS&gt;&lt;REXIT&gt;&lt;XDIRE&gt;1&lt;/XDIRE&gt;&lt;XDOOR&gt;UNNAMED_792276443#0&lt;/XDOOR&gt;&lt;XEXIT&gt;&lt;EXID&gt;StdOpenDoorway&lt;/EXID&gt;&lt;EXDAT /&gt;&lt;/XEXIT&gt;&lt;/REXIT&gt;&lt;/ROOMEXITS&gt;&lt;ROOMCONTENT&gt;&lt;ROOMMOBS /&gt;&lt;ROOMITEMS /&gt;&lt;/ROOMCONTENT&gt;&lt;/AROOM&gt;
+&lt;/AROOMS&gt;&lt;/AREA&gt;&lt;/SSAREA&gt;&lt;PORTID&gt;New Area#6&lt;/PORTID&gt;&lt;RIDET&gt;6&lt;/RIDET&gt;&lt;RIDEC&gt;1&lt;/RIDEC&gt;&lt;PUTSTR /&gt;&lt;MOUNTSTR /&gt;&lt;DISMOUNTSTR /&gt;&lt;STATESTR /&gt;&lt;STATESUBJSTR /&gt;&lt;RIDERSTR /&gt;&lt;OWNERID /&gt;&lt;PRICE&gt;1000&lt;/PRICE&gt;</ITEXT></ITEM>
+</ITEMS>
